--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.40.0",
+    "@types/node": "^18.19.130",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.0.0",
     "prettier": "^2.0.0",
