chore: ignore package-lock.json and test-results/.last-run.json

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ playwright-report/**
 # Editor / OS
 .DS_Store
 
+# Lockfiles (do not push local lockfile)
+package-lock.json
+
+# Specific runtime artifacts to ignore explicitly
+test-results/.last-run.json
+
